--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Opportuna - Explore, Apply, and Get to work with top MNCs, Today!</title>
+    <title>Oppsberg - Explore, Apply, and Get to work with top MNCs, Today!</title>
   </head>
   <body>
     <div id="root"></div>
